k8s/manifests/10-seed.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: seed
  namespace: voting-app
  labels:
    app: seed
spec:
  restartPolicy: Never
  containers:
    - name: seed
      image: curlimages/curl:latest
      command: ["/bin/sh"]
      args:
        - -c
        - |
          [...]
